# data_fetch_optimization

./: .flake8  README.md  pyproject.toml  simulation.py
data_fetch_optimization/: backoff.py  demo.py  log.py  operation.py  processing.py
tests/: test_backoff.py
